lspclient: handle server request with string id

BUG: 459960